k8s/base/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
