k8s/base/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/component: ingress-controller
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
    - name: dashboard
      port: 9000
      targetPort: dashboard
      protocol: TCP
